--- a/index.html
+++ b/index.html
@@ -1,11 +1,301 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel-Agency</title>
+    <title>Travel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const toggleBtn = document.getElementById("toggle");
+        const navList = document.getElementById("nav-list");
+
+        toggleBtn.addEventListener("click", () => {
+            navList.classList.toggle("active");
+        });
+    });
+</script>
+
 <body>
-    <p>hii</p>
+    <div class="outer-container">
+        <div class="Hero">
+            <div class="top-nav">
+                <div class="logo">
+                    <img src="assets/Logo.svg" alt="logo" id="img-logo" />
+                </div>
+                <ul class="nav-list" id="nav-list">
+                    <li>Desitnations</li>
+                    <li>Hotels</li>
+                    <li>Flights</li>
+                    <li>Bookings</li>
+                    <li><a href="#">Login</a></li>
+                    <li><button class="signup-btn">Sign up</button></li>
+                    <li>
+                        <select name="language" id="language">
+                            <option value="english">EN</option>
+                        </select>
+                    </li>
+                </ul>
+                <button class="toggle" id="toggle"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+                  </svg></button>
+            </div>
+            <div class="Hero-content">
+                <div class="description">
+                    <p id="tagline">Best Destinations around the world</p>
+                    <h1 id="heading">
+                        Travel, 
+                        <span class="enjoy">
+                            enjoy
+                            <img src="assets/Decore.svg" alt="" srcset="" id="decore" /></span>
+                        and live a new and full life
+                    </h1>
+                    <p id="para">
+                        Built Wicket longer admire do barton vanity itself do in it.
+                        Preferred to sportsmen it engrossed listening. Park gate sell they
+                        west hard for the.
+                    </p>
+                    <div class="cta">
+                        <div class="cta-btn">
+                            <button>Find out more</button>
+                        </div>
+                        <a class="play-demo">
+                            <img src="assets/Play button.svg" alt="" />
+                            <p>Play Demo</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="hero-img">
+                    <img src="assets/plane.svg" alt="" id="plane1" />
+                    <img src="assets/Traveller 1.svg" alt="" id="traveller" />
+                    <img src="assets/plane.svg" alt="" id="plane2" />
+                </div>
+            </div>
+            <div class="decore">
+                <img src="assets/Decore (1).svg" alt="" />
+            </div>
+        </div>
+        <div class="Services">
+            <p id="category-text">CATEGORY</p>
+            <p id="offer">We Offer Best Services</p>
+            <div class="category-container">
+                <div class="categorys">
+                    <img src="assets/Group 48.svg" alt="" />
+                    <div>
+                        <p id="title">Calculated Weather</p>
+                        <p>Built Wicket longer admire do barton vanity itself do in it.</p>
+                    </div>
+                </div>
+                <div class="categorys flight-active">
+                    <img src="assets/Group 51.svg" id="Flights" />
+                    <div>
+
+                        <p id="title">Best Flights</p>
+                        <p>Engrossed listening. Park gate sell they west hard for the.</p>
+                    </div>
+                </div>
+                <div class="categorys">
+                    <img src="assets/Group 50.svg" alt="" />
+                    <div>
+                        <p id="title">Local Events</p>
+                        <p>
+                            Barton vanity itself do in it. Preferd to men it engrossed
+                            listening.
+                        </p>
+                    </div>
+                </div>
+                <div class="categorys">
+                    <img src="assets/Group 49.svg" alt="" />
+                    <div>
+
+                        <p id="title">Customization</p>
+                        <p>
+                            We deliver outsourced aviation services for military customers
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <img src="assets/Rectangle 157.svg" alt="" id="crect" />
+        </div>
+        <div class="destinations">
+            <p id="subheading">Top Selling</p>
+            <p id="heading">Top Destinations</p>
+            <div class="destination-list">
+              <div class="destination one">
+                <div>
+                    <div class="location">
+                        <p>Rome, Italy</p>
+                        <p>$5,42k</p>
+                    </div>
+                    <div class="navigation">
+                        <img src="assets/navigation 1.svg" alt="" />
+                        <p>10 Days Trip</p>
+                    </div>
+                </div>
+              </div>
+              <div class="destination two">
+                <div>
+
+                    <div class="location">
+                        <p>Rome, Italy</p>
+                        <p>$5,42k</p>
+                    </div>
+                    <div class="navigation">
+                        <img src="assets/navigation 1.svg" alt="" />
+                        <p>10 Days Trip</p>
+                    </div>
+                </div>
+              </div>  <div class="destination three">
+                <div>
+
+                    <div class="location">
+                        <p>Rome, Italy</p>
+                        <p>$5,42k</p>
+                    </div>
+                    <div class="navigation">
+                        <img src="assets/navigation 1.svg" alt="" />
+                        <p>10 Days Trip</p>
+                    </div>
+                </div>
+              </div>
+              </div>
+            </div>
+            <div class="book-trip">
+                <div class="img">
+                  <img src="assets/Image.svg" alt="" />
+                </div>
+                <div class="desc">
+                  <p id="subheading">Easy and Fast</p>
+                  <p id="heading">Book your next trip in 3 easy steps</p>
+                  <div class="values">
+                    <div class="value">
+                      <img src="assets/Group 7.svg" alt="" />
+                      <div>
+                        <p>Choose Destination</p>
+                        <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                          tortor tempus.
+                        </p>
+                      </div>
+                    </div>
+                    <div class="value">
+                      <img src="assets/Group 12.svg" alt="" />
+                      <div>
+                        <p>Make Payment</p>
+                        <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                          tortor tempus.
+                        </p>
+                      </div>
+                    </div>
+                    <div class="value">
+                      <img src="assets/Group 11.svg" alt="" />
+                      <div>
+                        <p>Reach Airport on Selected Date</p>
+                        <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                          tortor tempus.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="testimonals-section">
+                <div class="desc">
+                    <p>TESTIMONIALS</p>
+                    <p id="title">What people sayabout Us.</p>
+                        <div class="elipse">
+                            <img src="assets/Ellipse 28.svg" alt="">
+                            <img src="assets/Ellipse 28.svg" alt="">
+                            <img src="assets/Ellipse 28.svg" alt="">
+                        </div>
+                </div>
+                <div class="cards">
+                    <div id="card-container">
+                        <img src="assets/Image (1).svg" alt="">
+                        <div class="card-1">
+                            <p>“On the Windows talking painted pasture yet its express parties use. Sure last upon he same as knew next. Of believed or diverted no.”</p>
+                            <div>
+                                <p>Mike taylor</p>
+                                <p>Lahore, Pakistan</p>
+                            </div>
+                        </div>
+                        <div class="card-2">
+                            <p>CEO of Red Button</p>
+                            <p>Chris Thomas</p>
+                        </div>
+                        <div class="pagination">
+                            <img src="assets/Pagination.svg" alt="" srcset="">
+                        </div>
+                    </div>
+        
+                </div>
+                <div></div>
+              </div>
+              <div class="logos">
+                <img src="assets/image 27.svg" alt="">
+                <img src="assets/image 28.svg" alt="">
+                <img src="assets/image 29.svg" alt="">
+                <img src="assets/image 30.svg" alt="">
+                <img src="assets/image 31.svg" alt="">
+            </div>
+            <div class="subscribe-section">
+                <div class="mask">
+                    <p>Subscribe to get information, latest news and other
+                        interesting offers about Jadoo</p>
+                    </div>
+                </div>
+                <div class="footer">
+                    <div class="footer-list">
+                        <div class="comapny-desk">
+                            <p id="footer-title">Jadoo.</p>
+                            <p>Book your trip in minute, get full
+                                Control for much longer.
+                            </p>
+                        </div>
+                        <div class="company-cols">
+                            <div>
+                                <p id="title">Company</p>
+                                <p>About</p>
+                                <p>Career</p>
+                                <p>Mobile</p>
+                            </div>
+                            <div>
+                                <p id="title">Contact</p>
+                                <p>Help/FAQ</p>
+                                <p>Press</p>
+                                <p>Affilate</p>
+                            </div><div>
+                     <p id="title">More</p>
+                     <p>Airlinefees</p>
+                     <p>Airline</p>
+                     <p>Low Fair Tips</p>
+                    </div>
+                </div>
+                <div class="outbound">
+                    <div class="discover">
+                        <img src="assets/Social.svg" alt="">
+                        <img id="insta" src="assets/instagram 1.svg" alt="">
+                        <img src="assets/Social (2).svg" alt="">
+                    </div>
+                    <P>Discover our app</P>
+                    <div class="solution">
+                        <img src="assets/Google Play.svg" alt="">
+                        <img src="assets/Play Store.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="cp">
+                <p id="copyright">All rights reserved@jadoo.co</p>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+    </div>
 </body>
+
 </html>
