--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <p id="heading">Top Destinations</p>
         <div class="destination-list">
           <div class="destination one">
-            <img src="assets/destination-1.svg" alt="" />
+            <img src="assets/11196466.webp" alt="" />
             <div>
               <div class="location">
                 <p>Rome, Italy</p>
@@ -147,7 +147,7 @@
             </div>
           </div>
           <div class="destination one">
-            <img src="assets/destination-1.svg" alt="" />
+            <img src="assets/11196466.webp" alt="" />
             <div>
               <div class="location">
                 <p>Rome, Italy</p>
@@ -160,7 +160,7 @@
             </div>
           </div>
           <div class="destination one">
-            <img src="assets/destination-1.svg" alt="" />
+            <img src="assets/11196466.webp" alt="" />
             <div>
               <div class="location">
                 <p>Rome, Italy</p>
@@ -287,7 +287,7 @@
         <img src="assets/Group 77.svg" id="message" alt="" />
         <img src="assets/Group 5.svg" id="stars" />
       </div>
-       <div class="footer">
+      <div class="footer">
         <div class="footer-list">
           <div class="comapny-desk">
             <p id="footer-title">Jadoo.</p>
@@ -329,7 +329,7 @@
         <div class="cp">
           <p id="copyright">All rights reserved@jadoo.co</p>
         </div>
-      </div> 
+      </div>
     </div>
   </body>
 </html>
